firewall off the VPN also :)

--- a/etc/pf.conf
+++ b/etc/pf.conf
@@ -41,9 +41,13 @@ match on msk0 proto { udp tcp } to   port domain queue dns_in
 match in on msk0                from 10.0.0.4    queue eee_in
 match out on msk0               to 10.0.0.4      queue eee_in
 
-# traffic on the internal network
-pass in  on msk0 from { 10.0.0.0/8 2001:470:1f11:488::/64 }
-pass out on msk0 to   { 10.0.0.0/8 2001:470:1f11:488::/64 }
+# internal traffic on the internal network
+pass in  on msk0 from { 10.0.0.0/24 2001:470:1f11:488::/64 }
+pass out on msk0 to   { 10.0.0.0/24 2001:470:1f11:488::/64 }
+
+# internal traffic on the VPN
+pass in  on tun0 from { 10.0.1.0/24 2001:470:1f11:488::/64 }
+pass out on tun0 to   { 10.0.1.0/24 2001:470:1f11:488::/64 }
 
 # allow icmp
 pass proto icmp  all keep state
@@ -61,8 +65,6 @@ pass in on aue0 proto { tcp udp } to <me> port 1194
 # everything is allowed out to teh intarwebs
 pass out on aue0
 pass out on gif0
-
-pass on tun0
 
 # NAT
 pass out on aue0 from msk0:network to any nat-to (aue0)
